example swagger XML comments and attributes
