# DogTinder/Controllers/AppointmentController.cs
@@ -4,6 +4,7 @@ using Microsoft.AspNetCore.Mvc;
 using System.Collections.Generic;
 using System.Linq;
 using System.Threading.Tasks;
+using Microsoft.AspNetCore.Http;
 using Microsoft.Extensions.Logging;
 
 namespace DogTinder.Controllers
@@ -29,7 +30,27 @@ namespace DogTinder.Controllers
 			return (await AppointmentService.GetAppointments()).ToList();
 		}
 
+		/// <summary>
+		/// Creates an appointment.
+		/// </summary>
+		/// <param name="postAppointment"></param>
+		/// <returns>A newly created appointment</returns>
+		/// <remarks>
+		/// Sample request:
+		///     POST /Appointment
+		///     {
+		///        "time": "2022-05-20",
+		///        "placeId": 1,
+		///        "dogId": 1
+		///     }
+		///
+		/// </remarks>
+		/// <response code="201">Return void</response>
+		/// <response code="400">If the item is null</response>
 		[HttpPost]
+		[ProducesResponseType(StatusCodes.Status201Created)]
+		[ProducesResponseType(StatusCodes.Status400BadRequest)]
+		[Produces("application/json")]
 		public async Task PostAppointment([FromBody] PostAppointment postAppointment)
 		{
 			Logger.LogInformation("Log message in the PostAppointment() method");
