# DogTinder/app-client/swagger.json
@@ -41,6 +41,55 @@
             }
           }
         }
+      },
+      "post": {
+        "tags": [
+          "Appointment"
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/PostAppointment"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/PostAppointment"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/PostAppointment"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Success"
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              }
+            }
+          }
+        }
       }
     },
     "/Dog": {
@@ -258,6 +307,10 @@
             "type": "string",
             "format": "date-time"
           },
+          "placeId": {
+            "type": "integer",
+            "format": "int32"
+          },
           "place": {
             "type": "string",
             "nullable": true
@@ -275,6 +328,10 @@
       "DogViewModel": {
         "type": "object",
         "properties": {
+          "dogId": {
+            "type": "integer",
+            "format": "int32"
+          },
           "name": {
             "type": "string",
             "nullable": true
@@ -282,6 +339,13 @@
           "breed": {
             "type": "string",
             "nullable": true
+          },
+          "ownerId": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "owner": {
+            "$ref": "#/components/schemas/OwnerViewModel"
           }
         },
         "additionalProperties": false
@@ -295,13 +359,6 @@
           },
           "name": {
             "type": "string",
-            "nullable": true
-          },
-          "dogs": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/DogViewModel"
-            },
             "nullable": true
           }
         },
@@ -320,6 +377,51 @@
           }
         },
         "additionalProperties": false
+      },
+      "PostAppointment": {
+        "type": "object",
+        "properties": {
+          "time": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "placeId": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "dogId": {
+            "type": "integer",
+            "format": "int32"
+          }
+        },
+        "additionalProperties": false
+      },
+      "ProblemDetails": {
+        "type": "object",
+        "properties": {
+          "type": {
+            "type": "string",
+            "nullable": true
+          },
+          "title": {
+            "type": "string",
+            "nullable": true
+          },
+          "status": {
+            "type": "integer",
+            "format": "int32",
+            "nullable": true
+          },
+          "detail": {
+            "type": "string",
+            "nullable": true
+          },
+          "instance": {
+            "type": "string",
+            "nullable": true
+          }
+        },
+        "additionalProperties": { }
       }
     }
   }
